--- a/SURF_data_preparation.ipynb
+++ b/SURF_data_preparation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,17 +80,27 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 6,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "cmd_str = lambda x: f\"\"\"java -classpath \"C:\\\\Users\\\\pdev438\\\\shared\\\\panichella-SURF-tool-adcc79b\\\\SURF-Tool\\\\SURF-Tool\\\\lib\\\\*;C:\\\\Users\\\\pdev438\\\\shared\\\\panichella-SURF-tool-adcc79b\\\\SURF-Tool\\\\SURF-Tool\\\\SURF.jar\" org.surf.Main C:\\\\Users\\\\pdev438\\\\projects\\\\unsupervised-classification-benchmark\\\\data\\\\xml\\\\{x}.xml {x}.xml \\n\"\"\""
+    "Donload SURF from https://zenodo.org/record/165128"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "surf_unzip_dir = \"D:\\\\peter_devine_projects\\\\SURF-tool-SURF-v1.0\\\\panichella-SURF-tool-adcc79b\"\n",
+    "xml_absolute_data_dir = \"D:\\\\peter_devine_projects\\\\unsupervised-classification-benchmark\\\\data\\\\xml\"\n",
+    "\n",
+    "cmd_str = lambda x: f\"\"\"java -classpath \"{surf_unzip_dir}\\\\SURF-Tool\\\\SURF-Tool\\\\lib\\\\*;{surf_unzip_dir}\\\\SURF-Tool\\\\SURF-Tool\\\\SURF.jar\" org.surf.Main {xml_absolute_data_dir}\\\\{x}.xml {x}.xml \\n\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,6 +112,13 @@
     "        \n",
     "        cmd_str_text += cmd_str(dataset_name)\n",
     "    f.write(cmd_str_text)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Run the run_surf.bat file that is now in your cwd"
    ]
   },
   {
@@ -128,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,10 +163,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
+    "raw_data_dir = \"./data/raw\"\n",
+    "\n",
     "sanitized_dataset_names = [x.replace(\" \", \"_\").replace(\"#\", \"_\") for x in os.listdir(raw_data_dir)]\n",
     "\n",
     "sanitized_name_dict = {sanitized: original for original, sanitized in zip(os.listdir(raw_data_dir), sanitized_dataset_names)}"
@@ -157,239 +176,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "chen_2014_facebook.xml\n",
-      "['non-informative' 'informative']\n",
-      "chen_2014_swiftkey.xml\n",
-      "['informative' 'non-informative']\n",
-      "chen_2014_tapfish.xml\n",
-      "['non-informative' 'informative']\n",
-      "chen_2014_templerun2.xml\n",
-      "['non-informative' 'informative']\n",
-      "ciurumelea_2017_2048.xml\n",
-      "['PRICING' 'USAGE' 'OTHER' 'COMPATIBILITY' 'RESSOURCES']\n",
-      "ciurumelea_2017_Abstract_Art.xml\n",
-      "['OTHER' 'USAGE' 'PRICING' 'COMPATIBILITY' 'RESSOURCES' 'PROTECTION']\n",
-      "ciurumelea_2017_AcDisplay.xml\n",
-      "['OTHER' 'PROTECTION' 'COMPATIBILITY' 'USAGE' 'RESSOURCES' 'PRICING']\n",
-      "ciurumelea_2017_Adblock_Plus.xml\n",
-      "['OTHER' 'PROTECTION' 'COMPATIBILITY' 'RESSOURCES' 'USAGE' 'PRICING']\n",
-      "ciurumelea_2017_Amaze_File_Manager.xml\n",
-      "['OTHER' 'RESSOURCES' 'USAGE' 'PRICING' 'COMPATIBILITY']\n",
-      "ciurumelea_2017_Autostarts.xml\n",
-      "['OTHER' 'PROTECTION' 'COMPATIBILITY' 'RESSOURCES' 'USAGE' 'PRICING']\n",
-      "ciurumelea_2017_A_Comic_Viewer.xml\n",
-      "['OTHER' 'RESSOURCES' 'PRICING' 'USAGE' 'COMPATIBILITY']\n",
-      "ciurumelea_2017_BatteryBot_Battery_Indicator.xml\n",
-      "['RESSOURCES' 'PROTECTION' 'PRICING' 'USAGE' 'OTHER' 'COMPATIBILITY']\n",
-      "ciurumelea_2017_Calculator.xml\n",
-      "['OTHER' 'USAGE' 'COMPATIBILITY' 'PRICING' 'RESSOURCES']\n",
-      "ciurumelea_2017_CatLog.xml\n",
-      "['OTHER' 'COMPATIBILITY' 'USAGE' 'PROTECTION' 'PRICING']\n",
-      "ciurumelea_2017_Duck_Duck_GO.xml\n",
-      "['OTHER' 'USAGE' 'RESSOURCES' 'PROTECTION' 'PRICING' 'COMPATIBILITY']\n",
-      "ciurumelea_2017_Financius_-_Expense_Manager.xml\n",
-      "['USAGE' 'OTHER' 'PROTECTION']\n",
-      "ciurumelea_2017_Muzei_Live_Wallpaper.xml\n",
-      "['COMPATIBILITY' 'OTHER' 'RESSOURCES' 'USAGE' 'PROTECTION' 'PRICING']\n",
-      "ciurumelea_2017_Turbo_Editor_(_Text_Editor_).xml\n",
-      "['COMPATIBILITY' 'PRICING' 'PROTECTION' 'USAGE' 'RESSOURCES']\n",
-      "ciurumelea_2017_Tweet_Lanes.xml\n",
-      "['COMPATIBILITY' 'USAGE' 'PRICING' 'RESSOURCES' 'PROTECTION']\n",
-      "ciurumelea_2017_Wally.xml\n",
-      "['USAGE' 'COMPATIBILITY' 'OTHER']\n",
-      "ciurumelea_2017_Xabber.xml\n",
-      "['COMPATIBILITY' 'RESSOURCES' 'USAGE' 'PROTECTION' 'OTHER']\n",
-      "di_sorbo_2016_blinq_summary.xml\n",
-      "['[INFO]' '[BUG]' '[REQUEST]' '[QUESTION]']\n",
-      "di_sorbo_2016_cstp_summary.xml\n",
-      "['[INFO]' '[REQUEST]']\n",
-      "di_sorbo_2016_doodlePairs_summary.xml\n",
-      "['[INFO]' '[BUG]']\n",
-      "di_sorbo_2016_karaokeFree_summary.xml\n",
-      "['[QUESTION]' '[BUG]' '[INFO]' '[REQUEST]']\n",
-      "di_sorbo_2016_karaokePaid_summary.xml\n",
-      "['[INFO]' '[BUG]' '[REQUEST]']\n",
-      "di_sorbo_2016_lifelog_summary.xml\n",
-      "['[REQUEST]' '[INFO]' '[BUG]' '[QUESTION]']\n",
-      "di_sorbo_2016_minesweeperReloaded_summary.xml\n",
-      "['[BUG]' '[REQUEST]' '[INFO]']\n",
-      "di_sorbo_2016_movieCreator_summary.xml\n",
-      "['[BUG]' '[REQUEST]' '[INFO]' '[QUESTION]']\n",
-      "di_sorbo_2016_picturexAndroid_summary.xml\n",
-      "['[INFO]' '[BUG]']\n",
-      "di_sorbo_2016_picturexWindowsPhone_summary.xml\n",
-      "['[INFO]' '[BUG]']\n",
-      "di_sorbo_2016_powernApp_summary.xml\n",
-      "['[INFO]' '[REQUEST]' '[BUG]' '[QUESTION]']\n",
-      "di_sorbo_2016_sheepOblock_summary.xml\n",
-      "['[INFO]' '[REQUEST]']\n",
-      "di_sorbo_2016_sketch_summary.xml\n",
-      "['[BUG]' '[INFO]' '[REQUEST]' '[QUESTION]']\n",
-      "di_sorbo_2016_stoneFlood_summary.xml\n",
-      "['[INFO]' '[REQUEST]' '[BUG]' '[QUESTION]']\n",
-      "di_sorbo_2016_trackID_summary.xml\n",
-      "['[BUG]' '[INFO]' '[REQUEST]' '[QUESTION]']\n",
-      "di_sorbo_2016_video_summary.xml\n",
-      "['[QUESTION]' '[INFO]' '[REQUEST]' '[BUG]']\n",
-      "di_sorbo_2016_weightTrack_summary.xml\n",
-      "['[INFO]' '[BUG]' '[REQUEST]']\n",
-      "di_sorbo_2016_wifiFileTransfer_summary.xml\n",
-      "['[INFO]' '[BUG]' '[QUESTION]']\n",
-      "guzman_2015_Angrybirds.xml\n",
-      "['Feature strength' 'Praise' 'Noise' 'User request' 'Feature shortcoming'\n",
-      " 'Bug report' 'Complaint' 'Usage scenario']\n",
-      "guzman_2015_Dropbox.xml\n",
-      "['Feature strength' 'Bug report' 'Feature shortcoming' 'User request'\n",
-      " 'Noise' 'Praise' 'Complaint' 'Usage scenario']\n",
-      "guzman_2015_Evernote.xml\n",
-      "['Bug report' 'Praise' 'Noise' 'Feature strength' 'Feature shortcoming'\n",
-      " 'Complaint' 'User request' 'Usage scenario']\n",
-      "guzman_2015_Picsart.xml\n",
-      "['Feature shortcoming' 'Bug report' 'Noise' 'Praise' 'User request'\n",
-      " 'Complaint' 'Feature strength']\n",
-      "guzman_2015_Pininterest.xml\n",
-      "['Praise' 'Feature shortcoming' 'Bug report' 'Noise' 'User request'\n",
-      " 'Feature strength' 'Complaint' 'Usage scenario']\n",
-      "guzman_2015_Tripadvisor.xml\n",
-      "['Feature shortcoming' 'Bug report' 'Noise' 'Feature strength' 'Praise'\n",
-      " 'User request' 'Usage scenario' 'Complaint']\n",
-      "guzman_2015_Whatsapp.xml\n",
-      "['Praise' 'Noise' 'Complaint' 'User request' 'Feature shortcoming'\n",
-      " 'Feature strength' 'Bug report']\n",
-      "maalej_2016_310947683.xml\n",
-      "['Rating' 'Bug']\n",
-      "maalej_2016_403692190.xml\n",
-      "['Rating']\n",
-      "maalej_2016__10_Fotocollage_Bildbearbeitung.xml\n",
-      "['Rating' 'Bug']\n",
-      "maalej_2016__10_line_gratis_anrufe.xml\n",
-      "['Rating' 'Feature']\n",
-      "maalej_2016__1_Camera_Zoom_FX.xml\n",
-      "['Feature' 'Rating' 'Bug']\n",
-      "maalej_2016__1_OfficeSuite_Pro_7__(PDF_und_HD).xml\n",
-      "['Rating' 'UserExperience' 'Bug' 'Feature']\n",
-      "maalej_2016__1_PicsArt_-_Photo_Studio.xml\n",
-      "['Rating' 'Feature']\n",
-      "maalej_2016__2_facebook_messenger.xml\n",
-      "['Rating']\n",
-      "maalej_2016__2_flipagram.xml\n",
-      "['Rating' 'Feature' 'Bug']\n",
-      "maalej_2016__3_Need_for_Speed_Most_Wanted.xml\n",
-      "['Feature' 'Rating' 'Bug']\n",
-      "maalej_2016__3_Seitenmanager.xml\n",
-      "['Rating' 'Bug' 'UserExperience' 'Feature']\n",
-      "maalej_2016__3_skype.xml\n",
-      "['Rating' 'Feature' 'Bug']\n",
-      "maalej_2016__4_antivirus_GRATIS.xml\n",
-      "['Rating' 'Feature']\n",
-      "maalej_2016__4_Photo_Grid_-_Collage_Maker.xml\n",
-      "['Rating']\n",
-      "maalej_2016__5_officesuite7.xml\n",
-      "['Rating']\n",
-      "maalej_2016__5_Plants_vs_Zombies.xml\n",
-      "['Rating' 'Feature' 'Bug']\n",
-      "maalej_2016__5_viber.xml\n",
-      "['Rating' 'Feature']\n",
-      "maalej_2016__6_Assassins_Creed_Pirates.xml\n",
-      "['Feature' 'UserExperience' 'Rating']\n",
-      "maalej_2016__6_firefox.xml\n",
-      "['Rating' 'Feature']\n",
-      "maalej_2016__6_MomentCam.xml\n",
-      "['Rating' 'Feature' 'UserExperience' 'Bug']\n",
-      "maalej_2016__6_Photo_Studio_PRO.xml\n",
-      "['Rating' 'Feature' 'Bug']\n",
-      "maalej_2016__7_Worms_2_Armageddon.xml\n",
-      "['Rating' 'Feature']\n",
-      "maalej_2016__8_gmx_mail.xml\n",
-      "['UserExperience' 'Rating' 'Feature']\n",
-      "maalej_2016__8_Photo_Editor_von_Aviary.xml\n",
-      "['Rating']\n",
-      "maalej_2016__8_Wo_ist_mein_Wasser.xml\n",
-      "['Rating' 'Bug']\n",
-      "maalej_2016__8_XDA_Premium.xml\n",
-      "['Rating' 'Feature']\n",
-      "maalej_2016__9_Modern_Combat_4_Zero_Hour.xml\n",
-      "['Rating' 'Feature' 'Bug']\n",
-      "maalej_2016__9_Perfect365_Gesichts-Make-Up.xml\n",
-      "['Rating' 'UserExperience' 'Feature']\n",
-      "scalabrino_2017_acr.browser.barebones.xml\n",
-      "['BUG' 'FEATURE']\n",
-      "scalabrino_2017_air.hmbtned.xml\n",
-      "['FEATURE' 'BUG']\n",
-      "scalabrino_2017_com.alfray.timeriffic.xml\n",
-      "['FEATURE' 'BUG']\n",
-      "scalabrino_2017_com.duckduckgo.mobile.android.xml\n",
-      "['FEATURE' 'BUG' 'SECURITY' 'USABILITY' 'ENERGY']\n",
-      "scalabrino_2017_com.ebay.mobile.xml\n",
-      "['BUG' 'FEATURE']\n",
-      "scalabrino_2017_com.google.zxing.client.android.xml\n",
-      "['PERFORMANCE' 'BUG' 'FEATURE' 'SECURITY']\n",
-      "scalabrino_2017_com.ringdroid.xml\n",
-      "['FEATURE' 'BUG' 'USABILITY' 'SECURITY']\n",
-      "scalabrino_2017_com.uberspot.a2048.xml\n",
-      "['BUG' 'FEATURE' 'PERFORMANCE']\n",
-      "scalabrino_2017_com.viber.voip.xml\n",
-      "['BUG' 'FEATURE']\n",
-      "scalabrino_2017_edu.berkeley.boinc.xml\n",
-      "['PERFORMANCE' 'FEATURE' 'BUG' 'ENERGY' 'USABILITY' 'SECURITY']\n",
-      "scalabrino_2017_org.dolphinemu.dolphinemu.xml\n",
-      "['BUG' 'PERFORMANCE' 'USABILITY' 'FEATURE']\n",
-      "scalabrino_2017_org.linphone.xml\n",
-      "['BUG' 'USABILITY' 'FEATURE' 'PERFORMANCE']\n",
-      "scalabrino_2017_org.wordpress.android.xml\n",
-      "['BUG' 'FEATURE' 'USABILITY' 'PERFORMANCE']\n",
-      "tizard_2019_features.xml\n",
-      "['acknowledgement of problem resolution' 'non-informative' 'other'\n",
-      " 'feature request' 'application guidance' 'help seeking'\n",
-      " 'attempted solution' 'praise for application' 'apparent bug'\n",
-      " 'limitation confirmation' 'question on application'\n",
-      " 'requesting more information' 'application usage' 'user setup'\n",
-      " 'agreeing with the feature request' 'malfunction confirmation']\n",
-      "tizard_2019_fire_fox.xml\n",
-      "['user setup' 'application guidance' 'other' 'apparent bug' 'help seeking'\n",
-      " 'question on application' 'dispraise for application' 'non-informative'\n",
-      " 'attempted solution' 'requesting more information' 'feature request'\n",
-      " 'malfunction confirmation' 'question on background'\n",
-      " 'limitation confirmation' 'agreeing with the problem'\n",
-      " 'acknowledgement of problem resolution' 'praise for application']\n",
-      "tizard_2019_issue.xml\n",
-      "['other' 'malfunction confirmation' 'non-informative'\n",
-      " 'question on application' 'application guidance' 'attempted solution'\n",
-      " 'application usage' 'user setup' 'apparent bug' 'question on background'\n",
-      " 'requesting more information' 'help seeking' 'feature request'\n",
-      " 'acknowledgement of problem resolution' 'agreeing with the problem'\n",
-      " 'praise for application' 'limitation confirmation']\n",
-      "williams_2017_@android.xml\n",
-      "['bug' 'oth' 'fea']\n",
-      "williams_2017_@callofduty.xml\n",
-      "['oth' 'fea' 'bug']\n",
-      "williams_2017_@googlechrome.xml\n",
-      "['oth' 'bug' 'fea']\n",
-      "williams_2017_@instagram.xml\n",
-      "['fea' 'oth' 'bug']\n",
-      "williams_2017_@minecraft.xml\n",
-      "['oth' 'bug' 'fea']\n"
+      "chen_2014_facebook.xml\n"
      ]
     },
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "williams_2017_@snapchat.xml\n",
-      "['oth' 'fea' 'bug']\n",
-      "williams_2017_@visualstudio.xml\n",
-      "['oth' 'bug' 'fea']\n",
-      "williams_2017_@whatsapp.xml\n",
-      "['fea' 'oth' 'bug']\n",
-      "williams_2017_@windows.xml\n",
-      "['oth' 'bug' 'fea']\n"
+     "ename": "UnicodeDecodeError",
+     "evalue": "'utf-8' codec can't decode byte 0xa8 in position 231476: invalid start byte",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mUnicodeDecodeError\u001b[0m                        Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-8-9bdea973194a>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     15\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     16\u001b[0m     \u001b[1;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mxml_file_dir\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"r\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mencoding\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m\"utf-8\"\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mf\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 17\u001b[1;33m         \u001b[0mxml_str_data\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mread\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     18\u001b[0m         \u001b[0mroot\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mET\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfromstring\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mxml_str_data\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     19\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mc:\\temp\\python_envs\\clustering_env\\lib\\codecs.py\u001b[0m in \u001b[0;36mdecode\u001b[1;34m(self, input, final)\u001b[0m\n\u001b[0;32m    320\u001b[0m         \u001b[1;31m# decode input (taking the buffer into account)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    321\u001b[0m         \u001b[0mdata\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mbuffer\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0minput\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 322\u001b[1;33m         \u001b[1;33m(\u001b[0m\u001b[0mresult\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mconsumed\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_buffer_decode\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0merrors\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mfinal\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    323\u001b[0m         \u001b[1;31m# keep undecoded input until the next call\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    324\u001b[0m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mbuffer\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdata\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mconsumed\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mUnicodeDecodeError\u001b[0m: 'utf-8' codec can't decode byte 0xa8 in position 231476: invalid start byte"
      ]
     }
    ],
@@ -398,7 +204,8 @@
     "import numpy as np\n",
     "\n",
     "results = {}\n",
-    "XML_dir = \"C:\\\\Users\\\\pdev438\\\\shared\\\\panichella-SURF-tool-adcc79b\\\\SURF-Tool\\\\SURF-Tool\\\\demo-data-set\\\\\"\n",
+    "XML_dir = \"D:\\\\peter_devine_projects\\\\unsupervised-classification-benchmark\\\\data\\\\ar_doc_output\"\n",
+    "comparison_dir = \"D:\\\\peter_devine_projects\\\\unsupervised-classification-benchmark\\\\data\\\\supervised_cls_preds\"\n",
     "\n",
     "for file in os.listdir(XML_dir):\n",
     "    \n",
@@ -455,6 +262,8 @@
     "        df.loc[int(index), \"surf_labels\"] = labels\n",
     "        \n",
     "    df[\"surf_labels\"] = df[\"surf_labels\"].apply(lambda x: [\"OTHER\"] if x is None else x)\n",
+    "    \n",
+    "    df.to_csv(os.path.join(comparison_dir, file[:-4]+\".csv\"))\n",
     "    \n",
     "    true_labels = df.labels.apply(lambda x: [any([true_label in x for true_label in true_label_list]) for true_label_list in true_label_set])\n",
     "    pred_labels = df.surf_labels.apply(lambda x: [any([pred_label in x for pred_label in prediction_label_list]) for prediction_label_list in prediction_label_set])\n",
@@ -842,7 +651,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.7.9"
   }
  },
  "nbformat": 4,
